# Threat-Intelligence-Platform

./: .env.example  Agent.md  docker-compose.yml  error.md  phases.md  requirements.md  walkthrough.md
backend/: .env.test  .pre-commit-config.yaml  Dockerfile  alembic.ini  celerybeat-schedule  check_alembic.sql  check_col.sql  fix_alembic.sql  migrate_a06.sql  pyproject.toml  start.sh  verify_enrichment_framework.py  verify_phase_2.2.py  verify_phase_2.3.py  verify_phase_2.4.py  verify_phase_2.5.py  verify_phase_2.6.py  verify_phase_2.7.py  verify_phase_2.8.py  verify_phase_2.9.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_18_1414-a01_initial_schema.py  2026_04_18_1530-a02_add_source_pull_fields.py  2026_04_18_1700-a03_make_audit_log_entity_fields_optional.py  2026_04_18_1710-a04_add_ingestion_evidence_type.py  2026_04_19_0720-a05_add_source_failure_tracking.py  2026_04_21_1200-a06_remove_ingestion_evidence_type.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  middleware.py
backend/app/core/: config.py  limiter.py  redis.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  confidence_snapshot.py  evidence.py  indicator.py  source.py  user.py
backend/app/schemas/: analyst.py  audit_log.py  evidence.py  indicator.py  source.py  user.py
backend/app/services/: audit_service.py  correlation_service.py  ingestion_service.py  parser.py  (+3 more)
backend/tests/: conftest.py  test_phase0_auth.py  test_phase1_ingestion.py  test_phase1_sources.py  test_phase2_intelligence.py
(+76 files in other folders)
