[project]
name = "tip-backend"
version = "0.1.0"
description = "Threat Intelligence Platform (TIP) - Backend"
authors = [
    { name = "Bitwise", email = "info@bitwise.example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic",
    "pydantic[email]>=2.0.0",
    "pydantic-settings",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "python-jose[cryptography]",
    "bcrypt",
    "structlog",
    "python-multipart",
    "asyncpg",
    "psycopg2-binary",
    "python-whois",
    "pytest",
    "pytest-asyncio",
    "fakeredis",
    "nest-asyncio",
    "slowapi>=0.1.9",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pythonwhois.*",
    "whois.*",
    "fakeredis.*",
    "passlib.*",
    "jose.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "fakeredis",
]